--- a/index.html
+++ b/index.html
@@ -377,40 +377,34 @@ th, td {
 					<tr>
 					  <th>AQI</th>
 					  <th>PM 2.5</th> 
-					  <th>PM 1</th>
 					  <th>PM 10</th>
 					</tr>
 					<tr>
 					  <td>0 - 25</td>
-					  <td>x</td>
-					  <td>x</td>
-					  <td>x</td>
+					  <td>0 - 50</td>
+					  <td>0 - 50</td>
 					  
 					</tr>
 					<tr>
 					  <td>26 - 50</td> 
-					  <td>x</td>
-					  <td>x</td>
-					  <td>x</td>
+					  <td>26 - 37</td>
+					  <td>51 - 80</td>
 	
 					</tr>
 					<tr>
 						<td>51 - 100</td>
-						<td>x</td>
-						<td>x</td>
-						<td>x</td>
+						<td>38 - 50</td>
+						<td>81 - 120</td>
 					</tr>
 					<tr>
 						<td>101 - 200</td>
-						<td>x</td>
-						<td>x</td>
-						<td>x</td>
+						<td>51 - 90</td>
+						<td>121 - 180</td>
 					</tr>
 					<tr>
 						<td>More than 200</td>
-						<td>x</td>
-						<td>x</td>
-						<td>x</td>
+						<td>More than 90</td>
+						<td>More than 181</td>
 					</tr>
 				  </table></center>
 				  <div></div>
