--- a/index.html
+++ b/index.html
@@ -379,33 +379,41 @@ th, td {
 					  <th>AQI</th>
 					  <th>PM 2.5</th> 
 					  <th>PM 10</th>
+					  <th>Warning Text</th>
 					</tr>
 					<tr>
 					  <td>0 - 25</td>
 					  <td>0 - 50</td>
 					  <td>0 - 50</td>
+					  <td>คุณภาพอากาศดีมาก เหมาะสำหรับกิจกรรมกลางแจ้งและการท่องเที่ยว</td>
 					  
 					</tr>
 					<tr>
 					  <td>26 - 50</td> 
 					  <td>26 - 37</td>
 					  <td>51 - 80</td>
+					  <td>คุณภาพอากาศดี สามารถทำกิจกรรมกลางแจ้งและการท่องเที่ยวได้ตามปกติ</td>
 	
 					</tr>
 					<tr>
 						<td>51 - 100</td>
 						<td>38 - 50</td>
 						<td>81 - 120</td>
+						<td>ประชาชนทั่วไป : สามารถทำกิจกรรมกลางแจ้งได้ตามปกติ
+							ผู้ที่ต้องดูแลสุขภาพเป็นพิเศษ : หากมีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง</td>
 					</tr>
 					<tr>
 						<td>101 - 200</td>
 						<td>51 - 90</td>
 						<td>121 - 180</td>
+						<td>ประชาชนทั่วไป : ควรเฝ้าระวังสุขภาพ ถ้ามีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น
+							ผู้ที่ต้องดูแลสุขภาพเป็นพิเศษ : ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น ถ้ามีอาการทางสุขภาพ เช่น ไอ หายใจลำบาก ตาอักเสบ แน่นหน้าอก ปวดศีรษะ หัวใจเต้นไม่เป็นปกติ คลื่นไส้ อ่อนเพลีย ควรปรึกษาแพทย์</td>
 					</tr>
 					<tr>
 						<td>More than 200</td>
 						<td>More than 90</td>
 						<td>More than 181</td>
+						<td>ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
 					</tr>
 				  </table></center>
 				  <div></div>
