--- a/index.html
+++ b/index.html
@@ -311,9 +311,12 @@ table, th, td {
   text-align: center;
 }
 
-th, td {
+th,{
 	text-align: center;
   	padding: 15px;
+}
+td{
+	padding: 15px;
 }
 
 </style>
