--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ td{
 
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
-				<center><table style="width:70% height:50%;">
+				<center><table style="width:70%; height:50%;">
 					<tr>
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
