--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@ td{
 
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
-				<center><table style="width:70%; height:50%;">
+				<center><table style="height:50%;">
 					<tr>
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
 					  <th width="15%">PM 10</th>
 					  <th width="55%">Warning Text</th>
 					</tr>
-					<tr>
+					<tr >
 					  <td width="15%">0 - 25</td>
 					  <td width="15%">0 - 50</td>
 					  <td width="15%">0 - 50</td>
