--- a/index.html
+++ b/index.html
@@ -384,35 +384,35 @@ td{
 					  <th width="15%">PM 10</th>
 					  <th width="55%">Warning Text</th>
 					</tr>
-					<tr >
+					<tr bgcolor="#08b3e7">
 					  <td width="15%">0 - 25</td>
 					  <td width="15%">0 - 50</td>
 					  <td width="15%">0 - 50</td>
 					  <td width="55%">คุณภาพอากาศดีมาก เหมาะสำหรับกิจกรรมกลางแจ้งและการท่องเที่ยว</td>
 					  
 					</tr>
-					<tr>
+					<tr bgcolor="#4fa535">
 					  <td width="15%">26 - 50</td> 
 					  <td width="15%">26 - 37</td>
 					  <td width="15%">51 - 80</td>
 					  <td width="55%">คุณภาพอากาศดี สามารถทำกิจกรรมกลางแจ้งและการท่องเที่ยวได้ตามปกติ</td>
 	
 					</tr>
-					<tr>
+					<tr bgcolor="#fbff00">
 						<td width="15%">51 - 100</td>
 						<td width="15%">38 - 50</td>
 						<td width="15%">81 - 120</td>
 						<td width="55%">ประชาชนทั่วไป : สามารถทำกิจกรรมกลางแจ้งได้ตามปกติ
 							ผู้ที่ต้องดูแลสุขภาพเป็นพิเศษ : หากมีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง</td>
 					</tr>
-					<tr>
+					<tr bgcolor="#db8503">
 						<td width="15%">101 - 200</td>
 						<td width="15%">51 - 90</td>
 						<td width="15%">121 - 180</td>
 						<td width="55%">ประชาชนทั่วไป : ควรเฝ้าระวังสุขภาพ ถ้ามีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น
 							ผู้ที่ต้องดูแลสุขภาพเป็นพิเศษ : ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น ถ้ามีอาการทางสุขภาพ เช่น ไอ หายใจลำบาก ตาอักเสบ แน่นหน้าอก ปวดศีรษะ หัวใจเต้นไม่เป็นปกติ คลื่นไส้ อ่อนเพลีย ควรปรึกษาแพทย์</td>
 					</tr>
-					<tr>
+					<tr bgcolor="#ec0f0f">
 						<td width="15%">More than 200</td>
 						<td width="15%">More than 90</td>
 						<td width="15%">More than 181</td>
