--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@ td{
 	padding: 15px;
 	text-align: left;
 }
+td.white{
+	color:rgb(255, 255, 255);
+}
 
 </style>
 </head>
@@ -416,7 +419,7 @@ td{
 						<td width="15%">More than 200</td>
 						<td width="15%">More than 90</td>
 						<td width="15%">More than 181</td>
-						<td width="55%">ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
+						<td width="55%" id="white">ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
 					</tr>
 				  </table></center>
 				  <p></p>
