--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ td{
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
 				<center><table style="height:50%;">
-					<tr>
+					<tr bgcolor="##FFFFFF">
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
 					  <th width="15%">PM 10</th>
