--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ td{
 
 		
 				<!-- <img src=image/aqi.png width="70%" > -->
-				<center><table style="height:50%;" class="col-sm-4">
+				<center><table style="height:50%;">
 					<tr bgcolor="#FFFFFF">
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
