--- a/index.html
+++ b/index.html
@@ -176,45 +176,45 @@ $(document).ready(function(e) {
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
-			$("#pm25").removeAttr("loading","good","mediam","verybad","bad").addClass("verygood");
+			$("#pm25").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
 		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
-			$("#pm25").removeAttr("loading","verygood","mediam","verybad","bad").addClass("good");
+			$("#pm25").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
 		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
-			$("#pm25").removeAttr("loading","good","verygood","verybad","bad").addClass("mediam");
+			$("#pm25").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
 		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
-			$("#pm25").removeAttr("loading","good","mediam","verybad","verygood").addClass("bad");
+			$("#pm25").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
 		else if(Arow.pm25 > 90)
 		{
-			$("#pm25").removeAttr("loading","good","mediam","bad","verygood").addClass("verybad");
+			$("#pm25").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
-			$("#pm10").removeAttr("loading","good","mediam","verybad","bad").addClass("verygood");
+			$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
 		}
 		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
-			$("#pm10").removeAttr("loading","verygood","mediam","verybad","bad").addClass("good");
+			$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
 		}
 		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
-			$("#pm10").removeAttr("loading","good","verygood","verybad","bad").addClass("mediam");
+			$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
 		}
 		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
-			$("#pm10").removeAttr("loading","good","mediam","verybad","verygood").addClass("bad");
+			$("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
 		}
 		else if(Arow.pm10 > 180)
 		{
-			$("#pm10").removeAttr("loading","good","mediam","bad","verygood").addClass("verybad");
+			$("#pm10").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
 		}
 	
 		setTimeoffline();
