--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ td{
 
 		<center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 		<center>
-				<FONT SIZE=4 ><div class="dialog success fadeIn animated" class="content" id="update_time">Loading...</div> </FONT>
+				<FONT SIZE=4 ><div class="content" id="update_time">Loading...</div> </FONT>
 		</center>
 				<!-- <img src=image/aqi.png width="70%" > -->
 				<center><table style="height:50%;">
