--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ td{
 		<br>
 				<!-- <img src=image/aqi.png width="70%" > -->
 		<div id="flip"> click</div>
+		<div id="panel">
 			<center><table style="height:50%;">
 					<tr bgcolor="#FFFFFF">
 					  <th width="15%">AQI</th>
@@ -447,7 +448,7 @@ td{
 						<td width="55%">ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
 					</tr>
 				  </table></center>
-
+				</div>
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
         <div id="chartContainer" style="height: 500px; width: 100%;"></div>
