--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ td{
 		</center>
 		<br>
 				<!-- <img src=image/aqi.png width="70%" > -->
-		<div id="flip"> click</div>
+		<div id="flip" weight="50%" > click</div>
 		<div id="panel">
 			<center><table style="height:50%;">
 					<tr bgcolor="#FFFFFF">
