--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ $(document).ready(function(){
 	padding: 30px 0;
 	border-radius: 6px 6px 0 0;
 	font-size: 50px;
-	color: rgba(255,255,255, 0.84);
+	color: #ffffffd6;
 	text-align: center;
 }
 
@@ -301,7 +301,7 @@ $(document).ready(function(){
 	background: #FFF;
 	border-radius: 0 0 6px 6px;
 	font-size: 22px;
-	color: rgba(0,0,0, 0.87);
+	color: #ffffffd6;
 	text-align: center;
 	padding: 10px 0;
 	box-shadow: 0px 10px 8px -10px rgba(0, 0, 0, 0.4) inset;
@@ -333,8 +333,8 @@ td{
 #panel, #flip {
   padding: 5px;
   text-align: center;
-  background-color: #e5eecc;
-  border: solid 1px #c3c3c3;
+  background-color: #ffffffd6;
+  border: solid 1px #ffffffd6;
 }
 
 #panel {
