--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ $(document).ready(function(){
 	background: #FFF;
 	border-radius: 0 0 6px 6px;
 	font-size: 22px;
-	color: #ffffffd6;
+	color: #000000de;
 	text-align: center;
 	padding: 10px 0;
 	box-shadow: 0px 10px 8px -10px rgba(0, 0, 0, 0.4) inset;
@@ -333,8 +333,8 @@ td{
 #panel, #flip {
   padding: 5px;
   text-align: center;
-  background-color: #ffffffd6;
-  border: solid 1px #ffffffd6;
+  background-color: #ffffff;
+  border: solid 1px #c3c3c3;
 }
 
 #panel {
