--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ td{
 				<!-- <img src=image/aqi.png width="70%" > -->
 		<div id="flip" weight="50%" > click</div>
 		<div id="panel">
-			<center><table style="height:50%;">
+			<center><table style="width:100%;">
 					<tr bgcolor="#FFFFFF">
 					  <th width="15%">AQI</th>
 					  <th width="15%">PM 2.5</th> 
