--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ $(document).ready(function(){
 
 window.onload = function () {
 
-var chart = new CanvasJS.Chart("chartContainer", {
+var chart = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
 	theme: "light2",
 	title:{
@@ -548,8 +548,8 @@ td{
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
 		<div id="chartContainer" style="height: 500px; width: 100%;"></div>
-		<br>
-		<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+		
+		<div id="chartContainer2" style="height: 370px; width: 100%;"></div>
 	</div>
 	
 	</div>
