--- a/index.html
+++ b/index.html
@@ -547,9 +547,7 @@ td{
 				</div>
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
-		<div id="chartContainer" style="height: 500px; width: 100%;"></div>
-		<br>
-		<div id="chartContainer2" style="height: 370px; width: 100%;"></div>
+		<div id="chartContainer2" style="width: 100%;"></div>
 	</div>
 	
 	</div>
