--- a/index.html
+++ b/index.html
@@ -57,14 +57,23 @@ $(document).ready(function(e) {
 	$("#pm10").addClass("loading");
 
 	chart = new CanvasJS.Chart("chartContainer", {
+		animationEnabled: true,
+		theme: "light2",
 		title: {
 			text: "Temperature & Humidityhhh"
 		},
 		axisX:{  
-			valueFormatString: "HH:mm"
+			valueFormatString: "HH:mm",
+			crosshair: {
+			enabled: true,
+			snapToDataPoint: true
+		}
 		},
 		axisY: {
-			valueFormatString: "0.0#"
+			valueFormatString: "0.0#",
+			crosshair: {
+			enabled: true
+		}
 		},
 		toolTip: {
 			shared: true,
@@ -75,18 +84,33 @@ $(document).ready(function(e) {
 				content += "<strong>PM1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				content += "<strong>PM25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				content += "<strong>PM10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
-				content += "<strong>time</strong>: " + e.entries[5].dataPoint.y ;
-
 				return content;
 			}
+		},
+		legend:{
+			cursor:"pointer",
+			verticalAlign: "bottom",
+			horizontalAlign: "left",
+			dockInsidePlotArea: true,
+			itemclick: toogleDataSeries
 		},
 		animationEnabled: true,
 		data: [
 			{
+				type: "line",
+				showInLegend: true,
+				name: "Total Visit",
+				markerType: "square",
+				xValueFormatString: "DD MMM, YYYY",
+				color: "#F08080",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			},
 			{
+				type: "line",
+				showInLegend: true,
+				name: "Unique Visit",
+				lineDashType: "dash",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			}
@@ -240,87 +264,6 @@ $(document).ready(function(){
   });
 });
 
-
-
-window.onload = function () {
-
-var chart = new CanvasJS.Chart("chartContainer2", {
-	animationEnabled: true,
-	theme: "light2",
-	title:{
-		text: "Site Traffic"
-	},
-	axisX:{
-		valueFormatString: "DD MMM",
-		crosshair: {
-			enabled: true,
-			snapToDataPoint: true
-		}
-	},
-	axisY: {
-		title: "Number of Visits",
-		crosshair: {
-			enabled: true
-		}
-	},
-	toolTip:{
-		shared:true
-	},  
-	legend:{
-		cursor:"pointer",
-		verticalAlign: "bottom",
-		horizontalAlign: "left",
-		dockInsidePlotArea: true,
-		itemclick: toogleDataSeries
-	},
-	data: [{
-		type: "line",
-		showInLegend: true,
-		name: "Total Visit",
-		markerType: "square",
-		xValueFormatString: "DD MMM, YYYY",
-		color: "#F08080",
-		dataPoints: [
-			{ x: new Date(2017, 0, 3), y: 650 },
-			{ x: new Date(2017, 0, 4), y: 700 },
-			{ x: new Date(2017, 0, 5), y: 710 },
-			{ x: new Date(2017, 0, 6), y: 658 },
-			{ x: new Date(2017, 0, 7), y: 734 },
-			{ x: new Date(2017, 0, 8), y: 963 },
-			{ x: new Date(2017, 0, 9), y: 847 },
-			{ x: new Date(2017, 0, 10), y: 853 },
-			{ x: new Date(2017, 0, 11), y: 869 },
-			{ x: new Date(2017, 0, 12), y: 943 },
-			{ x: new Date(2017, 0, 13), y: 970 },
-			{ x: new Date(2017, 0, 14), y: 869 },
-			{ x: new Date(2017, 0, 15), y: 890 },
-			{ x: new Date(2017, 0, 16), y: 930 }
-		]
-	},
-	{
-		type: "line",
-		showInLegend: true,
-		name: "Unique Visit",
-		lineDashType: "dash",
-		dataPoints: [
-			{ x: new Date(2017, 0, 3), y: 510 },
-			{ x: new Date(2017, 0, 4), y: 560 },
-			{ x: new Date(2017, 0, 5), y: 540 },
-			{ x: new Date(2017, 0, 6), y: 558 },
-			{ x: new Date(2017, 0, 7), y: 544 },
-			{ x: new Date(2017, 0, 8), y: 693 },
-			{ x: new Date(2017, 0, 9), y: 657 },
-			{ x: new Date(2017, 0, 10), y: 663 },
-			{ x: new Date(2017, 0, 11), y: 639 },
-			{ x: new Date(2017, 0, 12), y: 673 },
-			{ x: new Date(2017, 0, 13), y: 660 },
-			{ x: new Date(2017, 0, 14), y: 562 },
-			{ x: new Date(2017, 0, 15), y: 643 },
-			{ x: new Date(2017, 0, 16), y: 570 }
-		]
-	}]
-});
-chart.render();
 
 function toogleDataSeries(e){
 	if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
@@ -547,7 +490,7 @@ td{
 				</div>
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
-		<div id="chartContainer2" style="width: 100%;"></div>
+		<div id="chartContainer" style="width: 100%;"></div>
 	</div>
 	
 	</div>
