--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- Material Design fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sarabun" rel="stylesheet">
   
 <!-- Bootstrap -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -253,6 +254,8 @@ $(document).ready(function(){
 	font-size: 50px;
 	color: #ffffffd6;
 	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-family: 'Sarabun', sans-serif;
 }
 
 .dialog.primary > .content{
@@ -298,6 +301,8 @@ $(document).ready(function(){
 
 
 .dialog > .title {
+	font-family: 'Open Sans', sans-serif;
+	font-family: 'Sarabun', sans-serif;
 	background: #FFF;
 	border-radius: 0 0 6px 6px;
 	font-size: 22px;
@@ -308,6 +313,10 @@ $(document).ready(function(){
 	font-weight: bold;
 }
 
+h4{
+	font-family: 'Open Sans', sans-serif;
+font-family: 'Sarabun', sans-serif;
+}
 
 .nav-tabs {
 	margin-bottom: 20px;
