--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ td{
     <div role="tabpanel" class="tab-pane" id="history">
 		<div id="chartContainer" style="height: 500px; width: 100%;"></div>
 		<br>
-		<div id="chartContainer" style="height: 500px; width: 100%;"></div>
+		<div id="chartContainer2" style="height: 500px; width: 100%;"></div>
     </div>
 	</div>
 		
