--- a/index.html
+++ b/index.html
@@ -316,6 +316,14 @@ var chart = new CanvasJS.Chart("chartContainer2", {
 	}]
 });
 chart.render();
+function toogleDataSeries(e){
+	if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+		e.dataSeries.visible = false;
+	} else{
+		e.dataSeries.visible = true;
+	}
+	chart.render();
+}
 
 
 </script>
