--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				content += "<strong>PM1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
-				content += "<strong>PM25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
-				content += "<strong>PM10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
-				content += "<strong>time</strong>: " + e.entries[5].dataPoint.y ;
+				// content += "<strong>PM1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				// content += "<strong>PM25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
+				// content += "<strong>PM10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
+				// content += "<strong>time</strong>: " + e.entries[5].dataPoint.y ;
 
 				return content;
 			}
@@ -117,9 +117,9 @@ $(document).ready(function(e) {
 		shared:true,
 		contentFormatter: function (e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
-				content += "<strong>PM1</strong>: " + e.entries[0].dataPoint.y + " ug/m3";
-				content += "<strong>PM25</strong>: " + e.entries[1].dataPoint.y + " ug/m3";
-				content += "<strong>PM10</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[0].dataPoint.y + " ug/m3";
+				content += "<strong>pm25</strong>: " + e.entries[1].dataPoint.y + " ug/m3";
+				content += "<strong>pm10</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				return content;
 			}
 	},  
@@ -187,6 +187,10 @@ $(document).ready(function(e) {
 		row.time = new Date(row.time);
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[3].dataPoints.push({x: row.time, y: row.pm25});
+		chart.options.data[4].dataPoints.push({x: row.time, y: row.pm10});
+
 		chart.render();
 		
 
@@ -223,6 +227,9 @@ $(document).ready(function(e) {
 			row.time = new Date(row.time);
 			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+			chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+			chart.options.data[3].dataPoints.push({x: row.time, y: row.pm25});
+			chart.options.data[4].dataPoints.push({x: row.time, y: row.pm10});
 			
 			 lastRows = row;
 		});
