--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				content += "<strong>PM1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
-				content += "<strong>PM25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
-				content += "<strong>PM10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
+				content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				// content += "<strong>time</strong>: " + e.entries[5].dataPoint.y ;
 
 				return content;
@@ -119,9 +119,9 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				content += "<strong>PM1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
-				content += "<strong>PM25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
-				content += "<strong>PM10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
+				content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				return content;
 			}
 	},  
