--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ $(document).ready(function(e) {
 		var lastRows = 0;
 		$.each(dataRows, function(index, row) {
 			row.time = new Date(row.time);
-			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
-			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});			
+			chart.options.data[0].dataPoints.push({x: row.time, y: row.pm25});
+			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});			
 			lastRows = row;
 		});
 		chart.render();
