--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ $(document).ready(function(e) {
 		var row = sanp.val();
 		
 		row.time = new Date(row.time);
-		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
-		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm25});
+		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});
 		chart.render();
 		
 
