--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@ $(document).ready(function(e) {
 				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
-				// content += "<strong>time</strong>: " + e.entries[5].dataPoint.y ;
-
 				return content;
 			}
 		},
@@ -185,8 +183,11 @@ $(document).ready(function(e) {
 		var row = sanp.val();
 		
 		row.time = new Date(row.time);
-		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm25});
-		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});
+		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
+		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[3].dataPoints.push({x: row.time, y: row.pm10});
+		chart.options.data[4].dataPoints.push({x: row.time, y: row.pm25});
 		chart.render();
 		
 
@@ -221,9 +222,12 @@ $(document).ready(function(e) {
 		var lastRows = 0;
 		$.each(dataRows, function(index, row) {
 			row.time = new Date(row.time);
-			chart.options.data[0].dataPoints.push({x: row.time, y: row.pm25});
-			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});			
-			lastRows = row;
+			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
+			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+			chart.options.data[2].dataPoints.push({x: row.time, y: row.pm1});
+			chart.options.data[3].dataPoints.push({x: row.time, y: row.pm10});
+			chart.options.data[4].dataPoints.push({x: row.time, y: row.pm25});		
+			lastRows = 5;
 		});
 		chart.render();
 		
