--- a/index.html
+++ b/index.html
@@ -207,6 +207,49 @@ $(document).ready(function(e) {
 			$("#status > .content").text("Up to date");
 		}
 
+		if(row.pm25 >=0 && row.pm25 <=25)
+		{
+			$("#pm25").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
+		}
+		else if(row.pm25 >=26 && row.pm25 <=37)
+		{
+			$("#pm25").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
+		}
+		else if(row.pm25 >=38 && row.pm25 <=50)
+		{
+			$("#pm25").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
+		}
+		else if(row.pm25 >=51 && row.pm25 <=90)
+		{
+			$("#pm25").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
+		}
+		else if(row.pm25 > 90)
+		{
+			$("#pm25").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
+		}
+
+		////////////////////////////////////////////////////////////////////////////////////////////////////
+		if(row.pm10 >=0 && row.pm10 <=50)
+		{
+			$("#pm10").removeClass("loading","good","mediam","verybad","bad").addClass("verygood");
+		}
+		else if(row.pm10 >=51 && row.pm10 <=80)
+		{
+			$("#pm10").removeClass("loading","verygood","mediam","verybad","bad").addClass("good");
+		}
+		else if(row.pm10 >=81 && row.pm10 <=120)
+		{
+			$("#pm10").removeClass("loading","good","verygood","verybad","bad").addClass("mediam");
+		}
+		else if(row.pm10 >=121 && row.pm10 <=180)
+		{
+			$("#pm10").removeClass("loading","good","mediam","verybad","verygood").addClass("bad");
+		}
+		else if(row.pm10 > 180)
+		{
+			$("#pm10").removeClass("loading","good","mediam","bad","verygood").addClass("verybad");
+		}
+
 		setTimeoffline();
 	});
 
