--- a/index.html
+++ b/index.html
@@ -180,14 +180,11 @@ $(document).ready(function(e) {
 			return;
 		} 
 		
-		var row = 5;//sanp.val();
+		var row = sanp.val();
 
 		row.time = new Date(row.time);
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
-		chart.options.data[2].dataPoints.push({y: row.pm1});
-		chart.options.data[3].dataPoints.push({y: row.pm25});
-		chart.options.data[4].dataPoints.push({y: row.pm10});
 		chart.render();
 		
 		$("#temperature > .content").html(row.temperature + " &deg;C");
@@ -260,15 +257,12 @@ $(document).ready(function(e) {
 	logDHT.orderByChild("time").startAt(now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate()).once("value", function(sanp) {
 		console.log(sanp);
 		newItems = true;
-		var dataRows = 5;//sanp.val();
+		var dataRows = sanp.val();
 		var lastRows = 0;
 		$.each(dataRows, function(index, row) {
 			row.time = new Date(row.time);
 			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});	
-			chart.options.data[2].dataPoints.push({y: row.pm1});
-			chart.options.data[3].dataPoints.push({y: row.pm25});
-			chart.options.data[4].dataPoints.push({y: row.pm10});
 			lastRows = row;
 		});
 		chart.render();
