--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script>
 	
 var chart, toOffline;
+var char2;
 var newItems = false;
 // Initialize Firebase
 var config = {
@@ -91,7 +92,7 @@ $(document).ready(function(e) {
 	chart.render();	
 
 	window.onload = function () {
-	var chart = new CanvasJS.Chart("chartContainer2", {
+	chart2 = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
 	theme: "light2",
 	title:{
@@ -157,14 +158,14 @@ $(document).ready(function(e) {
 	}]
 	});
 
-	chart.render();
+	chart2.render();
 	function toogleDataSeries(e){
 		if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
 			e.dataSeries.visible = false;
 		} else{
 			e.dataSeries.visible = true;
 		}
-		chart.render();
+		chart2.render();
 	}
 	}
 	
@@ -186,7 +187,10 @@ $(document).ready(function(e) {
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
 		chart.render();
-		
+		chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		char2.render();
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
 		$("#pm1 > .content").html(row.pm1 + " ug/m3");
@@ -266,6 +270,15 @@ $(document).ready(function(e) {
 			lastRows = row;
 		});
 		chart.render();
+		
+		$.each(dataRows, function(index, row) {
+			row.time = new Date(row.time);
+			chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+			chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+			chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+			lastRows = row;
+		});
+		char2.render();
 		
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
