--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				// content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				// content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				// content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				return content;
@@ -118,7 +118,7 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				// content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				// content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				// content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				return content;
@@ -184,8 +184,9 @@ $(document).ready(function(e) {
 		var row = sanp.val();
 
 		row.time = new Date(row.time);
-		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
-		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
+		chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
 		chart.render();
 
 		$("#temperature > .content").html(row.temperature + " &deg;C");
@@ -259,11 +260,12 @@ $(document).ready(function(e) {
 		console.log(sanp);
 		newItems = true;
 		var dataRows = sanp.val();
-		var lastRows2 = 0;
+		var lastRows = 0;
 		$.each(dataRows, function(index, row) {
 			row.time = new Date(row.time);
-			chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
-			chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});	
+			chart.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+			chart.options.data[1].dataPoints.push({x: row.time, y: row.pm10});	
+			chart.options.data[2].dataPoints.push({x: row.time, y: row.pm10});	
 			lastRows = row;
 		});
 		chart.render();
