--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ $(document).ready(function(e) {
 			shared: true,
 			contentFormatter: function (e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
-				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
-				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
+				content += "<strong>pm25</strong>: " + e.entries[1].dataPoint.y + " %";
+				content += "<strong>pm10</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				// content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				// content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				return content;
@@ -116,9 +116,9 @@ $(document).ready(function(e) {
 		shared:true,
 		contentFormatter: function (e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
-				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
-				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
+				content += "<strong>pm1</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
+				content += "<strong>pm25</strong>: " + e.entries[1].dataPoint.y + " %";
+				content += "<strong>pm10</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
 				// content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
 				// content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
 				return content;
