--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ $(document).ready(function(e) {
 		markerType: "square",
 		xValueFormatString: "DD MMM, YYYY",
 		color: "#F08080",
+		axisYIndex: 1,
 		dataPoints: []
 	},
 	{
@@ -144,6 +145,7 @@ $(document).ready(function(e) {
 		name: "PM 10",
 		lineDashType: "dash",
 		color: "#F08080",
+		axisYIndex: 1,
 		dataPoints: []
 	},
 	{
@@ -152,6 +154,7 @@ $(document).ready(function(e) {
 		name: "PM 1",
 		lineDashType: "dash",
 		color: "#F08080",
+		axisYIndex: 1,
 		dataPoints: []
 	}]
 	});
