--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@ $(document).ready(function(e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
 				content += "<strong>Temperature</strong>: " + e.entries[0].dataPoint.y + " &deg;C<br>";
 				content += "<strong>Humidity</strong>: " + e.entries[1].dataPoint.y + " %";
-				// content += "<strong>pm1</strong>: " + e.entries[2].dataPoint.y + " ug/m3";
-				// content += "<strong>pm25</strong>: " + e.entries[3].dataPoint.y + " ug/m3";
-				// content += "<strong>pm10</strong>: " + e.entries[4].dataPoint.y + " ug/m3";
+
 				return content;
 			}
 		},
@@ -91,6 +89,10 @@ $(document).ready(function(e) {
 	});
 	chart.render();	
 
+
+
+
+		///////////////////////////////////////  <<  Chart2 PM2.5
 	window.onload = function () {
 	chart2 = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
@@ -100,17 +102,11 @@ $(document).ready(function(e) {
 	},
 	axisX:{
 		valueFormatString: "HH:mm",
-		crosshair: {
-			enabled: true,
-			snapToDataPoint: true
-		}
 	},
-	axisY: {
-		title: "Number of Pust ug/m3",
-		crosshair: {
-			enabled: true
-			
-		}
+	axisY2: {
+		title: "Number of Dust ug/m3",
+		prefix: "$",
+		suffix: "K"
 	},
 	toolTip:{
 		shared:true,
@@ -124,37 +120,42 @@ $(document).ready(function(e) {
 	},  
 	legend:{
 		cursor:"pointer",
-		verticalAlign: "bottom",
-		horizontalAlign: "left",
+		verticalAlign: "top",
+		horizontalAlign: "center",
 		dockInsidePlotArea: true,
 		itemclick: toogleDataSeries
 	},
 	data: [{
 		type: "line",
 		showInLegend: true,
+		axisYType: "secondary",
 		name: "PM 2.5",
-		markerType: "square",
+		markerSize: 1,
 		xValueFormatString: "DD MMM, YYYY",
+		yValueFormatString: "$##.## ug/m3",
 		color: "#F08080",
-		axisYIndex: 1,
 		dataPoints: []
 	},
 	{
 		type: "line",
 		showInLegend: true,
+		axisYType: "secondary",
 		name: "PM 10",
-		lineDashType: "dash",
-		color: "#F08080",
-		axisYIndex: 1,
+		markerSize: 1,
+		xValueFormatString: "DD MMM, YYYY",
+		yValueFormatString: "$##.## ug/m3",
+		color: "#3333FF",
 		dataPoints: []
 	},
 	{
 		type: "line",
 		showInLegend: true,
+		axisYType: "secondary",
 		name: "PM 1",
-		lineDashType: "dash",
-		color: "#F08080",
-		axisYIndex: 1,
+		markerSize: 1,
+		xValueFormatString: "DD MMM, YYYY",
+		yValueFormatString: "$##.## ug/m3",
+		color: "#FFD700",
 		dataPoints: []
 	}]
 	});
