--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ $(document).ready(function(e) {
 	},
 	axisY: {
 		title: "Number of Dust ug/m3",
-		prefix: "$",
-		suffix: "K"
+		suffix: " ug/m3"
 	},
 	toolTip:{
 		shared:true,
