--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@ $(document).ready(function(e) {
 		data: [
 			{
 				showInLegend: true,
-
+				name: "Temperature",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			},
 			{
 				showInLegend: true,
+				name: "Humidity",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			}
@@ -120,9 +121,9 @@ $(document).ready(function(e) {
 		shared:true,
 		contentFormatter: function (e) {
 				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
-				content += "<strong>pm1</strong>: " + e.entries[0].dataPoint.y + " ug/m3 ";
-				content += "<strong>pm25</strong>: " + e.entries[1].dataPoint.y + " ug/m3 ";
-				content += "<strong>pm10</strong>: " + e.entries[2].dataPoint.y + " ug/m3 ";
+				content += "<strong>PM 1</strong>: " + e.entries[0].dataPoint.y + " ug/m3 ";
+				content += "<strong>PM 2.5</strong>: " + e.entries[1].dataPoint.y + " ug/m3 ";
+				content += "<strong>PM 10</strong>: " + e.entries[2].dataPoint.y + " ug/m3 ";
 				return content;
 			}
 	},  
